--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "@fortawesome/free-solid-svg-icons": "^6.6.0",
+        "@fortawesome/react-fontawesome": "^0.2.2",
+        "@inertiajs/core": "^1.2.0",
         "react-data-table-component": "^7.6.2",
+        "react-toastify": "^10.0.5",
         "ziggy-js": "^2.3.0"
     }
 }
